[gd_scene load_steps=79 format=3 uid="uid://blf8o7dh1lja1"]

[ext_resource type="Script" uid="uid://ck83kq37x6xdh" path="res://scripts/player.gd" id="1_qhqgy"]
[ext_resource type="Texture2D" uid="uid://b40lvcjv3h8m6" path="res://assets/Player_Sprites/Mage_Idle.png" id="2_dqkch"]
[ext_resource type="Texture2D" uid="uid://cxbawglmg47xr" path="res://assets/Player_Sprites/Mage_Dash.png" id="2_qlg0r"]
[ext_resource type="Texture2D" uid="uid://v0krrtplrs83" path="res://assets/Player_Sprites/Mage_Run.png" id="3_qlg0r"]
[ext_resource type="Texture2D" uid="uid://brasv2x3ywl5" path="res://assets/Player_Sprites/Mage_Attack.png" id="3_tuyoq"]
[ext_resource type="Texture2D" uid="uid://ces5woqmebp6y" path="res://assets/Player_Sprites/Mage_Death.png" id="3_ur7pv"]
[ext_resource type="Texture2D" uid="uid://3bstqpc0k0ms" path="res://assets/Player_Sprites/Mage_Falling.png" id="4_y4r1p"]
[ext_resource type="Texture2D" uid="uid://dvi8p83y4cvbg" path="res://assets/Player_Sprites/Mage_JumpStart.png" id="7_d2wvv"]
[ext_resource type="Texture2D" uid="uid://dcuylghfrwbf6" path="res://assets/Player_Sprites/Mage_Jumping.png" id="8_3v2ag"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("2_qlg0r")
region = Rect2(42, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("2_qlg0r")
region = Rect2(84, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("2_qlg0r")
region = Rect2(126, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 38, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("2_qlg0r")
region = Rect2(42, 38, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_hax0n"]
atlas = ExtResource("2_qlg0r")
region = Rect2(84, 38, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4otl"]
atlas = ExtResource("2_qlg0r")
region = Rect2(126, 38, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2b1d"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 76, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs1tg"]
atlas = ExtResource("2_qlg0r")
region = Rect2(42, 76, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dvfe"]
atlas = ExtResource("2_qlg0r")
region = Rect2(84, 76, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gjji"]
atlas = ExtResource("3_ur7pv")
region = Rect2(0, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2ulf"]
atlas = ExtResource("3_ur7pv")
region = Rect2(42, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e8lb"]
atlas = ExtResource("3_ur7pv")
region = Rect2(84, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gdjj"]
atlas = ExtResource("3_ur7pv")
region = Rect2(126, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc3ue"]
atlas = ExtResource("3_ur7pv")
region = Rect2(0, 38, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxlsd"]
atlas = ExtResource("3_ur7pv")
region = Rect2(42, 38, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha2mi"]
atlas = ExtResource("3_ur7pv")
region = Rect2(84, 38, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_apa73"]
atlas = ExtResource("3_ur7pv")
region = Rect2(126, 38, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_74r1k"]
atlas = ExtResource("3_ur7pv")
region = Rect2(0, 76, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_8svfe"]
atlas = ExtResource("3_ur7pv")
region = Rect2(42, 76, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a3c5"]
atlas = ExtResource("3_ur7pv")
region = Rect2(84, 76, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_42b1b"]
atlas = ExtResource("3_ur7pv")
region = Rect2(126, 76, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7ic4"]
atlas = ExtResource("4_y4r1p")
region = Rect2(0, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_au7lq"]
atlas = ExtResource("4_y4r1p")
region = Rect2(42, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_nubpm"]
atlas = ExtResource("4_y4r1p")
region = Rect2(84, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_giy8y"]
atlas = ExtResource("3_tuyoq")
region = Rect2(0, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdfoy"]
atlas = ExtResource("3_tuyoq")
region = Rect2(42, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhpqf"]
atlas = ExtResource("3_tuyoq")
region = Rect2(84, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5jhy"]
atlas = ExtResource("3_tuyoq")
region = Rect2(0, 38, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_holxr"]
atlas = ExtResource("3_tuyoq")
region = Rect2(42, 38, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx1m4"]
atlas = ExtResource("3_tuyoq")
region = Rect2(84, 38, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("2_dqkch")
region = Rect2(0, 0, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("2_dqkch")
region = Rect2(35, 0, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("2_dqkch")
region = Rect2(70, 0, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("2_dqkch")
region = Rect2(105, 0, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("2_dqkch")
region = Rect2(140, 0, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("2_dqkch")
region = Rect2(0, 38, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("2_dqkch")
region = Rect2(35, 38, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("2_dqkch")
region = Rect2(70, 38, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("2_dqkch")
region = Rect2(105, 38, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("2_dqkch")
region = Rect2(140, 38, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("2_dqkch")
region = Rect2(0, 76, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("2_dqkch")
region = Rect2(35, 76, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("2_dqkch")
region = Rect2(70, 76, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("2_dqkch")
region = Rect2(105, 76, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("2_dqkch")
region = Rect2(140, 76, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("2_dqkch")
region = Rect2(0, 114, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("2_dqkch")
region = Rect2(35, 114, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua5cf"]
atlas = ExtResource("7_d2wvv")
region = Rect2(0, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_51ujp"]
atlas = ExtResource("7_d2wvv")
region = Rect2(42, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk41t"]
atlas = ExtResource("7_d2wvv")
region = Rect2(84, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuw3a"]
atlas = ExtResource("8_3v2ag")
region = Rect2(0, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_8txt3"]
atlas = ExtResource("8_3v2ag")
region = Rect2(42, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w11d"]
atlas = ExtResource("8_3v2ag")
region = Rect2(84, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_770dr"]
atlas = ExtResource("8_3v2ag")
region = Rect2(126, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f1cb"]
atlas = ExtResource("8_3v2ag")
region = Rect2(168, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdulj"]
atlas = ExtResource("8_3v2ag")
region = Rect2(210, 0, 42, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("3_qlg0r")
region = Rect2(0, 0, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("3_qlg0r")
region = Rect2(35, 0, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("3_qlg0r")
region = Rect2(70, 0, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("3_qlg0r")
region = Rect2(0, 38, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("3_qlg0r")
region = Rect2(35, 38, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("3_qlg0r")
region = Rect2(70, 38, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("3_qlg0r")
region = Rect2(0, 76, 35, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("3_qlg0r")
region = Rect2(35, 76, 35, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_wnwbv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_bj30b")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_jc3p3")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_hax0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4otl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2b1d")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_cs1tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dvfe")
}],
"loop": false,
"name": &"dash",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gjji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2ulf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e8lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gdjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc3ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxlsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha2mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apa73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74r1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8svfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a3c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42b1b")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7ic4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au7lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nubpm")
}],
"loop": false,
"name": &"falling",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_giy8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdfoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhpqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5jhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_holxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx1m4")
}],
"loop": false,
"name": &"freeze_anim",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua5cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51ujp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk41t")
}],
"loop": false,
"name": &"jump_start",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuw3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8txt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w11d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_770dr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f1cb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdulj")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}],
"loop": false,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gl8cc"]
size = Vector2(15, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ur7pv"]
size = Vector2(14, 31)

[node name="player" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_qhqgy")

[node name="sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wnwbv")
animation = &"death"
autoplay = "idle"

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(3, 4)
shape = SubResource("RectangleShape2D_gl8cc")

[node name="Camera2D" type="Camera2D" parent="." groups=["Player"]]
zoom = Vector2(2.49, 2.49)

[node name="Invic_timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Invic_timer" to="." method="_on_invic_timer_timeout"]

[node name="aura" type="Area2D" parent="."]

[node name="area_collision" type="CollisionShape2D" parent="aura"]
position = Vector2(3, 4)
shape = SubResource("RectangleShape2D_ur7pv")

[node name="camera" type="Camera2D" parent="."]
zoom = Vector2(3.065, 3.065)
position_smoothing_speed = 1.0

[node name="dash_timer" type="Timer" parent="."]
one_shot = true

[node name="sekundara" type="Timer" parent="."]

[node name="freeze_timer" type="Timer" parent="."]
one_shot = true

[node name="freeze_duration_timer" type="Timer" parent="."]
one_shot = true

[node name="freeze_cooldown" type="Timer" parent="."]
one_shot = true

[node name="rewind_timer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="sekundara" to="." method="_on_sekundara_timeout"]
[connection signal="timeout" from="freeze_timer" to="." method="_on_freeze_timer_timeout"]
[connection signal="timeout" from="freeze_duration_timer" to="." method="_on_freeze_duration_timer_timeout"]
[connection signal="timeout" from="freeze_cooldown" to="." method="_on_freeze_cooldown_timeout"]
[connection signal="timeout" from="rewind_timer" to="." method="_on_rewind_timer_timeout"]

